@@ -19,7 +19,7 @@ Copyright (C) 2014 by Jonny Schulz. All rights reserved.
 
 use strict;
 use warnings;
-use Bloonix::REST;
+use Bloonix::IO::SIPC;
 use Bloonix::Config;
 use Data::Dumper;
 use JSON;
@@ -57,8 +57,10 @@ if ($server) {
 }
 
 my $config = Bloonix::Config->parse($config_file);
-my $rest = Bloonix::REST->new($config->{server});
-my $response = $rest->post(path => "/hostcheck/$hostkey");
+my $io = Bloonix::IO::SIPC->new($config->{server});
+$io->connect;
+$io->send({ action => "hostcheck", hostkey => $hostkey });
+my $response = $io->recv;
 
 if (!$response || ref $response ne "HASH") {
     print "ERR: an unexpected error occurs\n\n";
