@@ -1,3 +1,7 @@
+bloonix-agent (0.51) released at 2015-04-07
+
+    * Fixed bloonix-init-host and implemented Bloonix::IO::SIPC.
+
 bloonix-agent (0.50) released at 2015-03-21
 
     * Implemented Bloonix::IO::SIPC as replacement for Bloonix:REST.
